RESOLVED FIXED29970
[Qt] Missing layoutTestController.overridePreference() implementation
https://bugs.webkit.org/show_bug.cgi?id=29970
Summary [Qt] Missing layoutTestController.overridePreference() implementation
Jakub Wieczorek
Reported 2009-10-01 10:18:36 PDT
As above.
Attachments
Implement the missing function (6.58 KB, patch)
2009-10-01 10:21 PDT, Jakub Wieczorek
no flags
Remove fixed tests from the Skipped list (1.95 KB, patch)
2009-10-01 10:24 PDT, Jakub Wieczorek
no flags
Implement the missing function (6.65 KB, patch)
2009-10-01 10:37 PDT, Jakub Wieczorek
hausmann: review-
Implement the missing function (7.70 KB, patch)
2009-10-02 08:57 PDT, Jakub Wieczorek
no flags
Jakub Wieczorek
Comment 1 2009-10-01 10:21:51 PDT
Created attachment 40456 [details] Implement the missing function
Jakub Wieczorek
Comment 2 2009-10-01 10:24:55 PDT
Created attachment 40458 [details] Remove fixed tests from the Skipped list
Jakub Wieczorek
Comment 3 2009-10-01 10:37:12 PDT
Created attachment 40459 [details] Implement the missing function The WebPage's constructor should call resetSettings().
Simon Hausmann
Comment 4 2009-10-02 08:04:32 PDT
Comment on attachment 40459 [details] Implement the missing function Great stuff, but I suggest to simplify the implmeneitation: Store the defaults in QWebSettings::globalSettings(), make overridePreferece() set the settings on the page's settings object and make resetSEttings() use resetAttribute, resetFontSize(), etc. to trigger the fallback to the global settings.
Jakub Wieczorek
Comment 5 2009-10-02 08:57:03 PDT
Created attachment 40523 [details] Implement the missing function (In reply to comment #4) > (From update of attachment 40459 [details]) > Great stuff, but I suggest to simplify the implmeneitation: > > Store the defaults in QWebSettings::globalSettings(), make overridePreferece() > set the settings on the page's settings object and make resetSEttings() use > resetAttribute, resetFontSize(), etc. to trigger the fallback to the global > settings. Sounds good, done.
Simon Hausmann
Comment 6 2009-10-02 09:03:07 PDT
Comment on attachment 40523 [details] Implement the missing function r=me, thanks!
WebKit Commit Bot
Comment 7 2009-10-02 09:14:57 PDT
Comment on attachment 40523 [details] Implement the missing function Clearing flags on attachment: 40523 Committed r49024: <http://trac.webkit.org/changeset/49024>
WebKit Commit Bot
Comment 8 2009-10-02 09:15:00 PDT
All reviewed patches have been landed. Closing bug.
Xan Lopez
Comment 9 2009-10-03 13:34:59 PDT
Reopening since there's one patch to land.
WebKit Commit Bot
Comment 10 2009-10-03 13:50:27 PDT
Comment on attachment 40458 [details] Remove fixed tests from the Skipped list Clearing flags on attachment: 40458 Committed r49066: <http://trac.webkit.org/changeset/49066>
WebKit Commit Bot
Comment 11 2009-10-03 13:50:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.