2009-10-02  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] Implement layoutTestController.overridePreference().
        https://bugs.webkit.org/show_bug.cgi?id=29970

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::WebPage::WebPage):
        (WebCore::WebPage::resetSettings):
        (WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):
        * DumpRenderTree/qt/jsobjects.cpp:
        (LayoutTestController::reset):
        (LayoutTestController::setPrivateBrowsingEnabled):
        (LayoutTestController::setPopupBlockingEnabled):
        (LayoutTestController::overridePreference):
        * DumpRenderTree/qt/jsobjects.h:

Canonical link: https://commits.webkit.org/40583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49024 268f45cc-cd09-0410-ab3c-d52691b4dbfc