WebKitTools/DumpRenderTree/qt/jsobjects.h
@@ -109,6 +109,7 @@ public slots:
     void clearAllDatabases();
 
     void waitForPolicyDelegate();
+    void overridePreference(const QString& name, const QVariant& value);
 
 private slots:
     void processWork();
